--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 * {
     margin: 0px;
@@ -8,7 +8,7 @@
 
 html, body {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     background-color: black;
 }
 
@@ -32,4 +32,13 @@ section#telefone {
     left: 50%;
     transform: translate(-50%,-50%);;
     background: url("../imagens/frame-iphone.png") no-repeat;
+    background-size: cover;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
