--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 
 html, body {
     height: 100vh;
-    width: 98vw;
+    width: 100vw;
     background-color: black;
 }
 
@@ -42,3 +42,23 @@ iframe#tela {
     width: 269px;
     height: 471px;
 }
+
+section#redes_sociais {
+    text-align: right;
+}
+
+section#redes_sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+
+section#redes_sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+    transition: transform .5s;
+}
+
